--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="images/artistlist.png" class="artistlist">
         </div>
         <div class="intro">
-            <section class="intro">
+            <section>
                 <p >Elektrik Eel Festival runs over 3 days with over 120 artists playing across 12 stages at the
                     Royal Park in Melbourne, Australia
                     With cutting-edge live shows and both international superstars of tomorrow, Elektrik Eel
@@ -32,9 +32,12 @@
                     <p>Engage your senses and become immersed in an electrifying aural universe.</p>
             </section>
         </div>
+       
     <div class="divider">
-        <img src="images/Dividingline.png" alt="line divider">
+        <!-- <img src="images/Dividingline.png" alt="line divider"> -->
     </div>
+   
+   
 
     </body>
 </html>
