--- a/index.html
+++ b/index.html
@@ -1,43 +1,63 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./style.css">
-        <title>Elektrik Eel Festival</title>
-    </head>
-    <body>
-        <header class="header">
-            <div class="logo">
-              <img src="images/fastival logo.png" alt="Electric Eel Logo">
-            </div>
-            <div class="social-icons">
-              <img src="images/fbicon.png" alt="Facebook">
-              <img src="images/instaicon.png" alt="Instagram">
-              <img src="images/twittericon.png" alt="Twitter">
-              <img src="images/yticon.png" alt="YouTube">
-            </div>
-          </header>
-        
-        <div class="imagebox"> 
-            <img src="images/artistlist.png" class="artistlist">
-        </div>
-        <div class="intro">
-            <section>
-                <p >Elektrik Eel Festival runs over 3 days with over 120 artists playing across 12 stages at the
-                    Royal Park in Melbourne, Australia
-                    With cutting-edge live shows and both international superstars of tomorrow, Elektrik Eel
-                    showcases the brightest acts from the world.</p>
-                    <p>Engage your senses and become immersed in an electrifying aural universe.</p>
-            </section>
-        </div>
-       
-    <div class="divider">
-        <!-- <img src="images/Dividingline.png" alt="line divider"> -->
-    </div>
-   
-   
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Elektrik Eel Festival</title>
+  </head>
+  <body>
+    <!-- Header section with logo and social icons -->
+    <header class="header border">
+      <div class="logo border">
+        <img src="images/fastival logo-cropped.png" alt="Electric Eel Logo" />
+      </div>
+      <div class="social-icons border">
+        <img src="images/twittericon.png" alt="Twitter" class="border" />
+        <img src="images/instaicon.png" alt="Instagram" class="border" />
+        <img src="images/fbicon.png" alt="Facebook" class="border" />
+        <img src="images/yticon.png" alt="YouTube" class="border" />
+      </div>
+    </header>
 
-    </body>
+    <!-- Image box for the artist list -->
+    <div class="imagebox border">
+      <img src="images/artistlist-cropped.png" class="artistlist border" />
+    </div>
+
+    <!-- Introductory section with event details -->
+    <div class="intro border">
+      <section>
+        <p>
+          <span>Welcome to the Elektrik Eel Festival!</span>
+        </p>
+        <p>
+          <span
+            >Three days, 120+ artists perform across 12 stages at Royal Park in
+            Melbourne.</span
+          >
+        </p>
+        <p>
+          <span>Immerse yourself in an electrifying world of sound!</span>
+        </p>
+      </section>
+    </div>
+
+    <!-- Divider for visual separation -->
+    <div class="divider"></div>
+
+    <!-- Button group for navigation -->
+    <div class="button-group border">
+      <button>Tickets</button>
+      <button>Experiences</button>
+      <button>Merch</button>
+    </div>
+  </body>
 </html>
