Added new changes
- Added temporary assets/images to best fit/try out with the figma design
- Added responsive styling
- Adjusted logo and artistlist image size
- Adjusted intro text size
- Enhanced buttons styling

--- a/index.html
+++ b/index.html
@@ -59,5 +59,13 @@
       <button>Experiences</button>
       <button>Merch</button>
     </div>
+
+    <!-- Social Buttons (only appears on small screen size) -->
+    <div class="social-icons-mobile border">
+      <img src="images/twittericon.png" alt="Twitter" class="border" />
+      <img src="images/instaicon.png" alt="Instagram" class="border" />
+      <img src="images/fbicon.png" alt="Facebook" class="border" />
+      <img src="images/yticon.png" alt="YouTube" class="border" />
+    </div>
   </body>
 </html>
