--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     <title>Elektrik Eel Festival</title>
   </head>
   <body>
+    <div class="notification-bar">
+        <div class="notification-content">
+          <p><strong>Limited Time Only!</strong></p>
+          <p>Early bird* price: $205 (3 days) </p>
+          <p>Full price: $340 (3 days) </p>
+          <p>Single day: $110 </p>
+          <p class="note">*Early bird price ends in August, when ticket costs for 3 days will change to full price.</p>
+        </div>
     <!-- Header section with logo and social icons -->
+      </div>
     <header class="header border">
       <div class="logo border">
         <img src="images/fastival logo-cropped.png" alt="Electric Eel Logo" />
