pushing marquee code

--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     <title>Elektrik Eel Festival</title>
   </head>
   <body>
+    <!-- <div class="notification-bar">
+      <div class="notification-content">
+        <p><strong>Limited Time Only!</strong></p>
+        <p>Early bird* price: $205 (3 days)</p>
+        <p>Full price: $340 (3 days)</p>
+        <p>Single day: $110</p>
+        <p class="note">
+          *Early bird price ends in August, when ticket costs for 3 days will
+          change to full price.
+        </p>
+      </div>
+    </div> -->
+    <div class="notification-bar">
+        <div class="notification-content">
+          <p><strong>Limited Time Only!</strong> Early bird* price: $205 (3 days) | Full price: $340 (3 days) | Single day: $110 | *Early bird price ends in August, when ticket costs for 3 days will change to full price.</p>
+        </div>
+      </div>
     <!-- Header section with logo and social icons -->
     <header class="header border">
       <div class="logo border">
