--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Elektrik Eel Festival</title>
   </head>
   <body>
+    <main>
     <!-- <div class="notification-bar">
       <div class="notification-content">
         <p><strong>Limited Time Only!</strong></p>
@@ -79,11 +80,47 @@
     </div>
 
     <!-- Social Buttons (only appears on small screen size) -->
-    <div class="social-icons-mobile border">
+    <!-- <div class="social-icons-mobile border">
       <img src="images/twittericon.png" alt="Twitter" class="border" />
       <img src="images/instaicon.png" alt="Instagram" class="border" />
       <img src="images/fbicon.png" alt="Facebook" class="border" />
       <img src="images/yticon.png" alt="YouTube" class="border" />
+    </div> -->
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-logo">
+          <img src="images/fastival logo-cropped.png" alt="Electric Eel Logo" />
+        </div>
+        <div class="footer-details">
+          <div class="footer-contact">
+            <p>PO BOX 1234, Melbourne, Australia</p>
+            <p>Mobile: +61 400 123 456</p>
+            <p>Landline: +61 3 1234 5678</p>
+          </div>
+          <br>
+          <div class="footer-social">
+            <img src="images/twittericon.png" alt="Twitter" />
+            <img src="images/instaicon.png" alt="Instagram" />
+            <img src="images/fbicon.png" alt="Facebook" />
+            <img src="images/yticon.png" alt="YouTube" />
+          </div>
+      </div>
+      <div class="footer-links">
+        <li><a href="#tickets">Tickets</a></li>
+        <li><a href="#experiences">Experiences</a></li>
+        <li><a href="#merchandise">Merchandise</a></li>
+        <li><a href="#contact">Contact Us</a></li>
     </div>
+    <div class="footer-right">
+      <h3>Subscribe to our newsletter</h3>
+      <br>
+      <form action="#" method="POST" class="footer-form">
+        <input type="email" name="email" placeholder="Enter your email" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
+  </footer>
   </body>
 </html>
