--- a/index.html
+++ b/index.html
@@ -1,74 +1,119 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./style.css">
-        <title>Elektrik Eel Festival</title>
-    </head>
-    <body>
-        <header class="header">
-            <div class="logo">
-              <img src="images/fastival logo.png" alt="Electric Eel Logo">
-            </div>
-            <div class="social-icons">
-              <img src="images/fbicon.png" alt="Facebook">
-              <img src="images/instaicon.png" alt="Instagram">
-              <img src="images/twittericon.png" alt="Twitter">
-              <img src="images/yticon.png" alt="YouTube">
-            </div>
-          </header>
-        
-        <div class="imagebox"> 
-            <img src="images/artistlist.png" class="artistlist">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Elektrik Eel Festival</title>
+  </head>
+  <body>
+    <main>
+    <!-- <div class="notification-bar">
+      <div class="notification-content">
+        <p><strong>Limited Time Only!</strong></p>
+        <p>Early bird* price: $205 (3 days)</p>
+        <p>Full price: $340 (3 days)</p>
+        <p>Single day: $110</p>
+        <p class="note">
+          *Early bird price ends in August, when ticket costs for 3 days will
+          change to full price.
+        </p>
+      </div>
+    </div> -->
+    <div class="notification-bar">
+        <div class="notification-content">
+          <p><strong>Limited Time Only!</strong> Early bird* price: $205 (3 days) | Full price: $340 (3 days) | Single day: $110 | *Early bird price ends in August, when ticket costs for 3 days will change to full price.</p>
         </div>
-        <div class="intro">
-            <section>
-                <p >Elektrik Eel Festival runs over 3 days with over 120 artists playing across 12 stages at the
-                    Royal Park in Melbourne, Australia
-                    With cutting-edge live shows and both international superstars of tomorrow, Elektrik Eel
-                    showcases the brightest acts from the world.</p>
-                    <p>Engage your senses and become immersed in an electrifying aural universe.</p>
-            </section>
-        </div>
-       
-    <div class="divider">
-        <!-- <img src="images/Dividingline.png" alt="line divider"> -->
-    </div>
-    <footer class="footer">
-            <div class="footer-logo">
-              <img src="images/festival_logo-cropped.png" alt="Electric Eel Logo" />
-            </div>
-            <div class="footer-details">
-              <div class="footer-contact">
-                <p>PO BOX 1234, Melbourne, Australia</p>
-                <p>Mobile: +61 400 123 456</p>
-                <p>Landline: +61 3 1234 5678</p>
-              </div>
-              <br>
-              <div class="footer-social">
-                <img src="images/twittericon.png" alt="Twitter" />
-                <img src="images/instaicon.png" alt="Instagram" />
-                <img src="images/fbicon.png" alt="Facebook" />
-                <img src="images/yticon.png" alt="YouTube" />
-              </div>
-          </div>
-          <div class="footer-links">
-            <li><a href="#tickets">Tickets</a></li>
-            <li><a href="#experiences">Experiences</a></li>
-            <li><a href="#merchandise">Merchandise</a></li>
-            <li><a href="#contact">Contact Us</a></li>
-        </div>
-        <div class="footer-right">
-          <h3>Subscribe to our newsletter</h3>
-          <form action="#" method="POST" class="footer-form">
-            <input type="email" name="email" placeholder="Enter your email" required>
-            <button type="submit">Subscribe</button>
-          </form>
-        </div>
-      </footer>
-   
+      </div>
+    <!-- Header section with logo and social icons -->
+      </div>
+    <header class="header border">
+      <div class="logo border">
+        <img src="images/fastival logo.png" alt="Electric Eel Logo" />
+      </div>
+      <div class="social-icons border">
+        <img src="images/twittericon.png" alt="Twitter" class="border" />
+        <img src="images/instaicon.png" alt="Instagram" class="border" />
+        <img src="images/fbicon.png" alt="Facebook" class="border" />
+        <img src="images/yticon.png" alt="YouTube" class="border" />
+      </div>
+    </header>
 
-    </body>
+    <!-- Image box for the artist list -->
+    <div class="imagebox border">
+      <img src="images/artistlist.png" class="artistlist border" />
+    </div>
+
+    <!-- Introductory section with event details -->
+    <div class="intro border">
+      <section>
+        <p>
+          <span>Welcome to the Elektrik Eel Festival!</span>
+        </p>
+        <p>
+          <span
+            >Three days, 120+ artists perform across 12 stages at Royal Park in
+            Melbourne.</span
+          >
+        </p>
+        <p>
+          <span>Immerse yourself in an electrifying world of sound!</span>
+        </p>
+      </section>
+    </div>
+
+    <!-- Divider for visual separation -->
+    <div class="divider"></div>
+
+    <!-- Button group for navigation -->
+    <div class="button-group border">
+      <button>Tickets</button>
+      <button>Experiences</button>
+      <button>Merch</button>
+    </div>
+
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-logo">
+          <img src="images/fastival logo-cropped.png" alt="Electric Eel Logo" />
+        </div>
+        <div class="footer-details">
+          <div class="footer-contact">
+            <p>PO BOX 1234, Melbourne, Australia</p>
+            <p>Mobile: +61 400 123 456</p>
+            <p>Landline: +61 3 1234 5678</p>
+          </div>
+          <br>
+          <div class="footer-social">
+            <img src="images/twittericon.png" alt="Twitter" />
+            <img src="images/instaicon.png" alt="Instagram" />
+            <img src="images/fbicon.png" alt="Facebook" />
+            <img src="images/yticon.png" alt="YouTube" />
+          </div>
+      </div>
+      <div class="footer-links">
+        <li><a href="#tickets">Tickets</a></li>
+        <li><a href="#experiences">Experiences</a></li>
+        <li><a href="#merchandise">Merchandise</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+    </div>
+    <div class="footer-right">
+      <h3>Subscribe to our newsletter</h3>
+      <br>
+      <form action="#" method="POST" class="footer-form">
+        <input type="email" name="email" placeholder="Enter your email" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
+  </footer>
+  </body>
 </html>
